tests/bugs/field_access_typecrash_303.sy
start :: fn do
    a := 1
    a.a
    a
end
// error: $Violating(Type::Int)
